app/drone/server/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: #@ data.values.drone.namespace
spec:
  replicas: 1
  selector:
    matchLabels: #@ data.values.drone.matchLabels
  template:
    metadata:
      labels: #@ data.values.drone.matchLabels
    spec:
      containers:
        - name: main
          image: #@ "drone/drone:{}".format(data.values.drone.version)
          imagePullPolicy: Always
          ports:
          - name: web
            containerPort: 80
          - name: other
            containerPort: 9000
---
kind: Service
apiVersion: v1
metadata:
  name: server
  namespace: #@ data.values.drone.namespace
spec:
  selector: #@ data.values.drone.matchLabels
  ports:
  - name: web
    port: 80
    targetPort: 80
  - name: other
    port: 9000
    targetPort: 9000
